Added basic properties to edit on profile card, updating, etc.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
 		<title>Github Card Generator</title>
 		<link rel="icon" href="src/icon.png">
 		<link rel="stylesheet" href="style.css">
+		<script src="main.js"></script>
 	</head>
 	<body>
-		
+		<img id="preview" src="">
+		<form id="input" name="input">
+			Username: <input type="text" name="username" placeholder="krazymanj">
+			<br>Title color: <input type="color" name="title_color" placeholder="#2f80ed">
+			<br>Text color: <input type="color" name="text_color" placeholder="#4c71f2">
+			<br>Icon color: <input type="color" name="icon_color" placeholder="#434d58">
+			<br>Border color: <input type="color" name="border_color" placeholder="#fffefe">
+			<br>Background color: <input type="color" name="background_color" placeholder="#e4e2e2">
+		</form>
 	</body>
 </html>
