Added font style, added notes, rearanged code

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!-- https://github.com/anuraghazra/github-readme-stats -->
+<!-- 
+	Readme stats repo: https://github.com/anuraghazra/github-readme-stats 
+	Themes: https://github.com/anuraghazra/github-readme-stats/blob/master/themes/index.js
+-->
 
 <!DOCTYPE html>
 <html lang="en">
