Added compiled dir to make it easier to go in my code, added theme interface to future work

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- 
 	Readme stats repo: https://github.com/anuraghazra/github-readme-stats 
 	Themes: https://github.com/anuraghazra/github-readme-stats/blob/master/themes/index.js
+	Themes(js): https://raw.githubusercontent.com/anuraghazra/github-readme-stats/master/themes/index.js
 -->
 
 <!DOCTYPE html>
@@ -12,7 +13,7 @@
 		<title>Github Card Generator</title>
 		<link rel="icon" href="src/icon.png">
 		<link rel="stylesheet" href="style.css">
-		<script src="main.js"></script>
+		<script src="compiled/main.js"></script>
 	</head>
 	<body>
 		<img id=preview>
