Removed typescript files from this project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<title>Github Card Generator</title>
 		<link rel="icon" href="src/icon.png">
 		<link rel="stylesheet" href="style.css">
-		<script src="compiled/main.js"></script>
+		<script src="main.js"></script>
 	</head>
 	<body>
 		<img id=preview>
