Changed icon to vector, added big github logo over page layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Github Card Generator</title>
-		<link rel="icon" href="src/icon.png">
+		<link rel="icon" href="favicon.svg">
 		<link rel="stylesheet" href="style.css">
 		<script src="main.js"></script>
 	</head>
@@ -97,6 +97,7 @@
 				<textarea name="link" id="link">https://github-readme-stats.vercel.app/api?username=anuraghazra</textarea>
 				<button id="copy_button">Copy</button>
 			</div>
+			<img src="src/imgs/github.svg">
 		</main>
 	</body>
 </html>
